<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imgCheck"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/str_imageDescription"
        app:srcCompat="@drawable/restaurant_check" />

    <TextView
        android:id="@+id/tvBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvResult"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="@string/str_labelTotalBill"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvBillTotal"
        android:layout_alignStart="@id/tvBillTotal"
        android:layout_below="@+id/tvBillTotal"
        android:layout_marginTop="10dp"
        android:text="@string/str_labelPeopleCount"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvServiceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPeople"
        android:layout_alignStart="@id/tvPeople"
        android:layout_below="@+id/tvPeople"
        android:layout_marginTop="10dp"
        android:text="@string/str_labelServiceLevel"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTotalBilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvBillTotal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:width="100dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etPeopleCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvPeople"
        android:layout_alignEnd="@+id/etTotalBilled"
        android:layout_alignRight="@+id/etTotalBilled"
        android:width="100dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="end"
        android:inputType="number"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spnServiceLevel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvServiceLevel"
        android:layout_alignEnd="@+id/etTotalBilled"
        android:layout_alignRight="@+id/etTotalBilled"
        android:ems="10"
        android:entries="@array/arrayService"
        android:gravity="end"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvServiceLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_buttonText" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCalculateTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:width="300dp"
        android:height="150dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvCalculateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imgCheck"
        android:layout_alignStart="@+id/imgCheck" />

</RelativeLayout>
